--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,8 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+tools/
+
+# Captnproto output files
+*.capnp.cs
