Let's see if there are files around us

--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -16,7 +16,7 @@ jobs:
         dotnet-version: 3.1.101
     - name: Setup build environment
       # run: ./setup_dev_env_windows.ps1
-      run: pwd
+      run: ls
       shell: pwsh
     - name: Build with dotnet
       run: dotnet build --configuration Release
