--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - master
+      - repository_dispatch
 
 jobs:
   linux_docker_build:
@@ -14,4 +15,4 @@ jobs:
       run: dotnet build --configuration Release
       working-directory: src/core
     container:
-      image: teqdruid/esi-build:0.1-dev.1
+      image: teqdruid/esi:devenv-0.1
