Start of generation

--- a/src/core/schema/schema.csproj
+++ b/src/core/schema/schema.csproj
@@ -14,6 +14,9 @@
     <CapnpFiles Include="EsiCoreAnnotations.capnp">
       <Verbose Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">true</Verbose>
     </CapnpFiles>
+    <CapnpFiles Include="/usr/include/capnp/schema.capnp">
+      <Verbose Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">true</Verbose>
+    </CapnpFiles>
   </ItemGroup>
 
 </Project>
