--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -17,7 +17,4 @@ jobs:
       run: dotnet build --configuration Release
       working-directory: src/core
     - name: Integration tests
-      uses: fylein/python-pytest-github-action@v1
-      with:
-        # args: pip3 install -r requirements.txt && pytest test/unit
-        args: pytest src/core/tests
+      uses: cclauss/GitHub-Action-for-pytest@0.5.0
