--- a/src/core/SVCodeGen/SVCodeGen.csproj
+++ b/src/core/SVCodeGen/SVCodeGen.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../schema/schema.csproj"/>
+  </ItemGroup>
 </Project>
