Finding schema directory properly

--- a/src/core/tests/unittests.csproj
+++ b/src/core/tests/unittests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
 
     <ProjectReference Include="../schema/schema.csproj"/>
+    <ProjectReference Include="../utils/utils.csproj"/>
   </ItemGroup>
 
 </Project>
