--- a/src/core/schema/schema.csproj
+++ b/src/core/schema/schema.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="Capnp.Net.Runtime" Version="$(CapnpPackageReferenceVersion)" />
     <PackageReference Include="CapnpC.CSharp.MsBuild.Generation" Version="$(CapnpPackageReferenceVersion)" />
     <PackageReference Include="CliWrap" Version="2.5.0" />
+
+    <ProjectReference Include="../utils/utils.csproj"/>
   </ItemGroup>
 
   <ItemGroup>
