--- a/src/core/schema/schema.csproj
+++ b/src/core/schema/schema.csproj
@@ -9,6 +9,9 @@
     <PackageReference Include="Capnp.Net.Runtime" Version="$(CapnpPackageReferenceVersion)" />
     <PackageReference Include="CapnpC.CSharp.MsBuild.Generation" Version="$(CapnpPackageReferenceVersion)" />
     <PackageReference Include="CliWrap" Version="3.0.0-alpha3" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
 
     <ProjectReference Include="../utils/utils.csproj"/>
   </ItemGroup>
