Logging via serilog

--- a/src/core/schema/schema.csproj
+++ b/src/core/schema/schema.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <CapnpPackageReferenceVersion>1.2.138</CapnpPackageReferenceVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
