--- a/src/core/tests/unittests.csproj
+++ b/src/core/tests/unittests.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.5.0"/>
+    <PackageReference Include="ReportGenerator" Version="4.5.2"/>
 
     <ProjectReference Include="../schema/schema.csproj"/>
   </ItemGroup>
