Adding dotnet test step to ci flow

--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -16,5 +16,8 @@ jobs:
     - name: Build with dotnet
       run: dotnet build --configuration Release
       working-directory: src/core
+    - name: Core Unit Tests
+      run: dotnet test
+      working-directory: src/core
     - name: Core integration tests
       run: pytest src/core
