Makefile rules for capnp dumps

--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -1,6 +1,9 @@
-investData:
-	capnp compile -I../../schema/ -o- stress1.capnp > stress1.capnp.CodeGeneratorRequest.bin
-	cat stress1.capnp.CodeGeneratorRequest.bin | capnp decode /usr/include/capnp/schema.capnp CodeGeneratorRequest > stress1.capnp.CodeGeneratorRequest.txt
+include ../capnp.mk
+
+investData: stress1.capnp.txt stress1_fail.capnp.txt
 
 run: investData
-	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1.capnp.CodeGeneratorRequest.bin
+	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1.capnp.bin
+
+clean:
+	rm -f *.txt *.bin
