--- a/src/core/tests/toy_example/Makefile
+++ b/src/core/tests/toy_example/Makefile
@@ -1,3 +1,3 @@
-investData:
-	capnp compile -I../../schema/ -o- toy.capnp > toy.capnp.CodeGeneratorRequest.bin
-	cat toy.capnp.CodeGeneratorRequest.bin | capnp decode /usr/include/capnp/schema.capnp CodeGeneratorRequest > toy.capnp.CodeGeneratorRequest.txt
+include ../capnp.mk
+
+investData: toy.capnp.txt
