--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -2,7 +2,7 @@ include ../capnp.mk
 
 investData: stress1.capnp.txt stress1_fail.capnp.txt
 
-run: investData
+run: stress1.capnp.bin
 	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1.capnp.bin
 
 clean:
