--- a/src/core/tests/toy_example/Makefile
+++ b/src/core/tests/toy_example/Makefile
@@ -1,3 +1,6 @@
 include ../capnp.mk
 
 investData: toy.capnp.txt
+
+run: toy.capnp.bin
+	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen.exe toy.capnp.bin
