--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -2,8 +2,11 @@ include ../capnp.mk
 
 investData: stress1.capnp.txt stress1_fail.capnp.txt
 
-run: stress1.capnp.bin
-	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1.capnp.bin
+run: stress1_synth.capnp.bin
+	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1_synth.capnp.bin
 
 clean:
 	rm -f *.txt *.bin
+
+vlog: run
+	vlog -sv09compat *.sv
