--- a/src/core/tests/toy_example/Makefile
+++ b/src/core/tests/toy_example/Makefile
@@ -4,3 +4,12 @@ investData: toy.capnp.txt
 
 run: toy.capnp.bin
 	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen.exe toy.capnp.bin
+
+vericompile: run
+	verilator --lint-only *.sv
+
+vlog: run
+	vlog -sv09compat *.sv
+
+vsim: vlog
+	vsim Polynomial3Compute_tb
