Pytest based integration test
No verilator yet

--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -3,7 +3,7 @@ include ../capnp.mk
 investData: stress1.capnp.txt stress1_fail.capnp.txt
 
 run: stress1_synth.capnp.bin
-	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1_synth.capnp.bin
+	dotnet run --project ../../SVCodeGen -- stress1_synth.capnp.bin
 
 clean:
 	rm -f *.txt *.bin
