--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.autoComplete.extraPaths": ["./src"]
+    "python.autoComplete.extraPaths": [
+        "./src"
+    ],
+    "python.pythonPath": "/usr/bin/python3.6"
 }
