Adding a Questa test (requires a Questa license)

--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -14,7 +14,7 @@ verilator:
 
 vlog: run
 	vlog -sv09compat *.sv
-
-shape: vlog
 	vopt Shape_tb -o Shape_tb_vopt
+
+vsim: vlog
 	vsim Shape_tb_vopt -c -do "run 100; exit"
