Fixing typo in CI yml

--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -20,4 +20,4 @@ jobs:
       run: dotnet test
       working-directory: src/core
     - name: Core integration tests
-      run: -m nolic pytest src/core
+      run: pytest -m nolic src/core
