--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -9,7 +9,7 @@ clean:
 	rm -f *.txt *.bin *.esi.svh *.esi.sv
 	rm -rf obj_dir work __pycache__
 
-verilator:
+verilator: run
 	verilator --cc -Wno-fatal *.sv --top-module Shape_tb
 
 vlog: run
