CI checks for SV syntax (#11)
* Pytest based integration test

No verilator yet

* Run verilator as part of the test

* Verilator is more permissable than Questa

* Adding a Questa test (requires a Questa license)

* Fixing typo in CI yml

* Fixing Makefile

--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -3,14 +3,18 @@ include ../capnp.mk
 investData: stress1.capnp.txt stress1_fail.capnp.txt
 
 run: stress1_synth.capnp.bin
-	../../SVCodeGen/bin/Debug/netcoreapp3.1/SVCodeGen stress1_synth.capnp.bin
+	dotnet run --project ../../SVCodeGen -- stress1_synth.capnp.bin
 
 clean:
-	rm -f *.txt *.bin
+	rm -f *.txt *.bin *.esi.svh *.esi.sv
+	rm -rf obj_dir work __pycache__
+
+verilator: run
+	verilator --cc -Wno-fatal *.sv --top-module Shape_tb
 
 vlog: run
 	vlog -sv09compat *.sv
-
-shape: vlog
 	vopt Shape_tb -o Shape_tb_vopt
+
+vsim: vlog
 	vsim Shape_tb_vopt -c -do "run 100; exit"
