--- a/src/core/tests/unittests.csproj
+++ b/src/core/tests/unittests.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../common.props" />
+
   <PropertyGroup>
+    <OutputType>DLL</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
