--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "python.autoComplete.extraPaths": [
         "./src"
     ],
-    "python.pythonPath": "/usr/bin/python3.6"
+    "python.pythonPath": "/usr/bin/python3.6",
+    "files.eol": "\n",
 }
