--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -7,7 +7,7 @@ on:
       - repository_dispatch
 
 jobs:
-  linux_docker_build:
+  linux_build:
     name: Build and test on Ubuntu
     runs-on: ubuntu-latest
     container:
@@ -32,6 +32,7 @@ jobs:
         path: src/core/bin/esi_core_linux
   linux_docker_run:
     name: Test on bare Ubuntu image
+    needs: linux_build
     runs-on: ubuntu-latest
     container:
       image: ubuntu:16.04
