--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -41,11 +41,15 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: esi_core_linux
-          path: bin/core
+          path: ../bin/core
       - uses: actions/checkout@v1
         with:
           path: src
-      - run: find
+      - run: |
+          find
+          pwd
+          cd ..
+          find
       - name: Test SVCodeGen
         run: bin/core/esi_core_linux/SVCodeGen src/src/core/tests/stress1/stress1_synth.capnp
-
+        working-directory: .
