--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -49,4 +49,4 @@ jobs:
           pwd
           find
       - name: Test SVCodeGen
-        run: bin/core/esi_core_linux/SVCodeGen src/src/core/tests/stress1/stress1_synth.capnp
+        run: bin/core/SVCodeGen src/src/core/tests/stress1/stress1_synth.capnp
