--- a/src/core/schema/schema.csproj
+++ b/src/core/schema/schema.csproj
@@ -17,23 +17,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <CapnpFiles Include="EsiCoreAnnotations.capnp">
-      <Verbose Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">true</Verbose>
-    </CapnpFiles>
-    <CapnpFiles Include="CapnpSchema.capnp">
-      <Verbose Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">true</Verbose>
-    </CapnpFiles>
-
     <Content Include="/usr/bin/capnp" Condition="'$(OS)' == 'Unix'">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="/usr/lib/x86_64-linux-gnu/libcapnp-0.6.1.so" Condition="'$(OS)' == 'Unix'">
+    <Content Include="/usr/lib/x86_64-linux-gnu/libcapnp*.so" Condition="'$(OS)' == 'Unix'">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="/usr/lib/x86_64-linux-gnu/libcapnpc-0.6.1.so" Condition="'$(OS)' == 'Unix'">
+    <Content Include="/usr/lib/x86_64-linux-gnu/libkj-*.so" Condition="'$(OS)' == 'Unix'">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="/usr/lib/x86_64-linux-gnu/libkj-0.6.1.so" Condition="'$(OS)' == 'Unix'">
+
+    <Content Include="schema/**">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
