--- a/.github/workflows/esi_ci.yml
+++ b/.github/workflows/esi_ci.yml
@@ -7,7 +7,8 @@ on:
       - repository_dispatch
 
 jobs:
-  linux_docker_build:
+  linux_build:
+    name: Build and test on Ubuntu
     runs-on: ubuntu-latest
     container:
       image: teqdruid/esi:devenv-0.3
@@ -21,3 +22,34 @@ jobs:
       working-directory: src/core
     - name: Core integration tests
       run: pytest -m nolic src/core
+    - name: Dotnet publish linux
+      run: dotnet publish -o bin/esi_core_linux -r linux-x64
+      working-directory: src/core
+    - run: tar -zcvf esi_core_linux.tar.gz esi_core_linux
+      working-directory: src/core/bin
+    - name: Upload ESI Core Linux artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: esi_core_linux
+        path: src/core/bin/esi_core_linux.tar.gz
+  linux_docker_run:
+    name: Test on bare Ubuntu image
+    needs: linux_build
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:16.04
+    steps:
+      - name: Download executable
+        uses: actions/download-artifact@v1
+        with:
+          name: esi_core_linux
+          path: tarballs
+      - run: tar -zxvf tarballs/esi_core_linux.tar.gz
+      - uses: actions/checkout@v2
+        with:
+          path: src
+      - run: |
+          pwd
+          find
+      - name: Test SVCodeGen
+        run: esi_core_linux/SVCodeGen src/src/core/tests/stress_tests/stress1_synth.capnp
