--- a/src/core/schema/schema.csproj
+++ b/src/core/schema/schema.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="../common.props" />
+
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <!-- <CapnpPackageReferenceVersion>1.2.189</CapnpPackageReferenceVersion> -->
     <LangVersion>8.0</LangVersion>
+    <!-- <EnableDefaultCompileItems>false</EnableDefaultCompileItems> -->
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,6 +24,23 @@
     <CapnpFiles Include="CapnpSchema.capnp">
       <Verbose Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">true</Verbose>
     </CapnpFiles>
+
+    <!-- <Compile Include="*.cs" /> -->
+
+    <Content Include="/usr/bin/capnp" Condition="'$(OS)' == 'Unix'">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="/usr/lib/x86_64-linux-gnu/libcapnp*.so" Condition="'$(OS)' == 'Unix'">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="/usr/lib/x86_64-linux-gnu/libkj-*.so" Condition="'$(OS)' == 'Unix'">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+
+    <Content Include="*.capnp">
+      <Link>schema/%(Filename)%(Extension)</Link>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
