--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -1,6 +1,6 @@
 include ../capnp.mk
 
-investData: stress1.capnp.txt stress1_fail.capnp.txt
+investData: stress1_synth.capnp.txt stress1.capnp.txt stress1_fail.capnp.txt
 
 run: stress1_synth.capnp.bin
 	dotnet run --project ../../SVCodeGen -- -i stress1_synth.capnp.bin
