Moving all libs to c# 8

--- a/src/core/common.props
+++ b/src/core/common.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 </Project>
