--- a/src/core/SVCodeGen/SVCodeGen.csproj
+++ b/src/core/SVCodeGen/SVCodeGen.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../schema/schema.csproj"/>
+    <ProjectReference Include="../core/core.csproj"/>
+    <ProjectReference Include="../capnp/capnp.csproj"/>
   </ItemGroup>
 </Project>
