these were working before I cleaned
damn msbuild

--- a/src/core/capnp/capnp.csproj
+++ b/src/core/capnp/capnp.csproj
@@ -37,7 +37,7 @@
     </Content>
 
     <Content Include="*.capnp">
-      <Link>schema/%(Filename)%(Extension)</Link>
+      <Link>capnp/%(Filename)%(Extension)</Link>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
