Damn name conflict

--- a/src/core/SVCodeGen/SVCodeGen.csproj
+++ b/src/core/SVCodeGen/SVCodeGen.csproj
@@ -9,6 +9,6 @@
 
   <ItemGroup>
     <ProjectReference Include="../core/core.csproj"/>
-    <ProjectReference Include="../capnp/capnp.csproj"/>
+    <ProjectReference Include="../capnp.convert/capnp.csproj"/>
   </ItemGroup>
 </Project>
