Type code documentation, code location changes, and interface model  (#60)
* New parent class EsiObject and EsiInterface

Also a very basic test for EsiInterfaces

* Interface model and capnp conversion

Just missing test

* Moving all libs to c# 8

* Adding an interface test

and syncing stress1 and stress1_synth

* Moving data schema into 'core' and capnp conversion into new capnp lib

* Code documentation

* I swear... somehow this was building!

just not after a clean. Whelp, good thing I have PR gates

* these were working before I cleaned

damn msbuild

* OK, I'll admit I didn't run the integration tests

* Damn name conflict

* I'm clearly getting a bit sick of this...

--- a/src/core/SVCodeGen/SVCodeGen.csproj
+++ b/src/core/SVCodeGen/SVCodeGen.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../schema/schema.csproj"/>
+    <ProjectReference Include="../core/core.csproj"/>
+    <ProjectReference Include="../capnp.convert/capnp.csproj"/>
   </ItemGroup>
 </Project>
