Adding hwlibs and supporting collatoral

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ addopts = -v --strict-markers
 markers =
     nolic: These tests do not require any licenses
     questa: These tests require a Questa license
+    hwlib: These tests are internal MSFT tests since they require an internal tool and licenses to run
