--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,10 @@ endif()
 set(CAPNPC_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
 find_package(CapnProto CONFIG REQUIRED)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 add_subdirectory(src/core/cosim/cosim_dpi_server)
+add_subdirectory(src/core/cosim/dummy_simulator)
+
+# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+# include(CPack)
