--- a/src/core/cosim/cosim_dpi_server/CMakeLists.txt
+++ b/src/core/cosim/cosim_dpi_server/CMakeLists.txt
@@ -7,7 +7,7 @@ capnp_generate_cpp(CAPNP_SRCS CANPN_HDRS esi_cosim_dpi.capnp)
 
 include_directories(include)
 set(HEADERS ${CAPNP_HDRS} include/svdpi.h include/dpi.hpp)
-set(SOURCES ${CAPNP_SRCS} DpiEntryPoints.cpp Server.cpp)
+set(SOURCES ${CAPNP_SRCS} DpiEntryPoints.cpp Server.cpp EndPoint.cpp)
 add_library(EsiCosimDpiServer SHARED ${HEADERS} ${SOURCES})
 target_link_libraries(EsiCosimDpiServer PRIVATE
     CapnProto::kj CapnProto::kj-async CapnProto::kj-gzip
