Write arrays as structs with num fields equal to length

--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -9,8 +9,8 @@ run: stress1_synth.capnp.bin
 
 write:
 	-dotnet test ../../ --filter name=ReadWriteCompareStress1Synth
-	# capnp decode ../../capnp.convert/CapnpSchema.capnp CodeGeneratorRequest < schema1_synth.esi.capnp > schema1_synth.esi.capnp.txt
-	capnpc-c++ < schema1_synth.esi.capnp
+	capnp compile -I../../capnp.convert/ -o- schema1_synth.esi.capnp > schema1_synth.esi.capnp.bin
+	capnp decode ../../capnp.convert/CapnpSchema.capnp CodeGeneratorRequest < schema1_synth.esi.capnp.bin  > schema1_synth.esi.capnp.txt
 
 clean:
 	rm -f *.txt *.bin *.esi.svh *.esi.sv
