Output an ESI-compatible capnp schema (#68)
* New design

* Breaking out capnp reader

* Scaffolding and test for capnp-esi transform

* Adding structural equals for interfaces

* A bunch of more write code

* Traversal methods

* More write code

* More writer code

* Maybe this isn't the best way...

* Yeah, this way is definitely easier...

* Making tests pass + array output support

* Creating new ID based on the old id and a hash

* Write arrays as structs with num fields equal to length

--- a/src/core/tests/stress_tests/Makefile
+++ b/src/core/tests/stress_tests/Makefile
@@ -7,6 +7,11 @@ investData: stress1_synth.capnp.txt stress1.capnp.txt stress1_fail.capnp.txt
 run: stress1_synth.capnp.bin
 	dotnet run --project ../../SVCodeGen -- -i stress1_synth.capnp.bin
 
+write:
+	-dotnet test ../../ --filter name=ReadWriteCompareStress1Synth
+	capnp compile -I../../capnp.convert/ -o- schema1_synth.esi.capnp > schema1_synth.esi.capnp.bin
+	capnp decode ../../capnp.convert/CapnpSchema.capnp CodeGeneratorRequest < schema1_synth.esi.capnp.bin  > schema1_synth.esi.capnp.txt
+
 clean:
 	rm -f *.txt *.bin *.esi.svh *.esi.sv
 	rm -rf obj_dir work __pycache__
