Stub MtiPli DLL so we don't have to compile against a simulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.0.0)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 # Pick up vcpkg toolchain from environment variable
 if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+  message( STATUS "Found VCPKG at $ENV{VCPKG_ROOT}")
   set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
       CACHE STRING "")
 endif()
@@ -19,7 +22,7 @@ set(CAPNPC_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
 find_package(CapnProto CONFIG REQUIRED)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-add_subdirectory(src/core/cosim/cosim_dpi_server)
+add_subdirectory(src/core/cosim)
 # add_subdirectory(src/core/cosim/dummy_simulator)
 
 # set(CPACK_PROJECT_NAME ${PROJECT_NAME})
