Run the verilog simulator then the rpc tests

--- a/src/core/cosim/tests/loopback/Makefile
+++ b/src/core/cosim/tests/loopback/Makefile
@@ -1,8 +1,8 @@
 build:
-	cmake -S ../../../../ -B/tmp/esi/bin
+	cmake -S ../../../../../ -B/tmp/esi/bin
 	cmake --build /tmp/esi/bin
 	# cmake --build ../../../../bin --target install
-	verilator --cc --trace --top-module cosim_test Cosim_DpiPkg.sv Cosim_Endpoint.sv driver.sv --exe driver.cpp /tmp/esi/bin/src/core/cosim/cosim_dpi_server/libEsiCosimDpiServer.so -LDFLAGS "-lpthread"
+	verilator --cc --trace --top-module cosim_test ../../rtl/Cosim_DpiPkg.sv ../../rtl/Cosim_Endpoint.sv driver.sv --exe driver.cpp /tmp/esi/bin/src/core/cosim/cosim_dpi_server/libEsiCosimDpiServer.so -LDFLAGS "-lpthread"
 	make USER_CPPFLAGS="-DVL_USER_STOP -O0 -ggdb" -j -C obj_dir -f Vcosim_test.mk Vcosim_test
 
 run:
@@ -15,9 +15,9 @@ debug:
 	LD_LIBRARY_PATH=/tmp/esi/bin/src/core/cosim/cosim_dpi_server/ gdb ./obj_dir/Vcosim_test +trace
 
 questa:
-	cmake -S ../../../../ -B/tmp/esi/bin
+	cmake -S ../../../../../ -B/tmp/esi/bin
 	cmake --build /tmp/esi/bin
-	vlog -sv Cosim_DpiPkg.sv Cosim_Endpoint.sv driver.sv +acc
+	vlog -sv ../../rtl/Cosim_DpiPkg.sv ../../rtl/Cosim_Endpoint.sv driver.sv +acc
 	vopt cosim_test -o cosim_test_opt +acc
 
 qrun:
