--- a/src/core/capnp.convert/capnp.csproj
+++ b/src/core/capnp.convert/capnp.csproj
@@ -26,13 +26,13 @@
 
     <!-- <Compile Include="*.cs" /> -->
 
-    <Content Include="/usr/bin/capnp" Condition="'$(OS)' == 'Unix'">
+    <Content Include="$(VCPKG_ROOT)/installed/x64-linux/tools/capnproto/capnp*" Condition="'$(OS)' == 'Unix'">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="/usr/lib/x86_64-linux-gnu/libcapnp*.so" Condition="'$(OS)' == 'Unix'">
+    <Content Include="$(VCPKG_ROOT)/installed/x64-linux/lib/libcapnp*.so" Condition="'$(OS)' == 'Unix'">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="/usr/lib/x86_64-linux-gnu/libkj-*.so" Condition="'$(OS)' == 'Unix'">
+    <Content Include="$(VCPKG_ROOT)/installed/x64-linux/lib/libkj*.so" Condition="'$(OS)' == 'Unix'">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
 
