--- a/src/core/SVCodeGen/SVCodeGen.csproj
+++ b/src/core/SVCodeGen/SVCodeGen.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
