--- a/src/core/core/core.csproj
+++ b/src/core/core/core.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
 
+    <PackageReference Include="RazorLight" Version="2.0.0-beta7" />
+
     <PackageReference Include="CommandLineParser" Version="2.7.82" />
   </ItemGroup>
 </Project>
