--- a/src/core/core/core.csproj
+++ b/src/core/core/core.csproj
@@ -16,4 +16,11 @@
 
     <PackageReference Include="CommandLineParser" Version="2.7.82" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="../support/**/*">
+      <Link>support/%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content> 
+  </ItemGroup>
 </Project>
