--- a/src/core/core/core.csproj
+++ b/src/core/core/core.csproj
@@ -12,7 +12,15 @@
     <PackageReference Include="Serilog" Version="2.9.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Scriban" Version="2.1.2" />
 
     <PackageReference Include="CommandLineParser" Version="2.7.82" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="../support/**/*">
+      <Link>support/%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content> 
   </ItemGroup>
 </Project>
